# anymailer

./: .editorconfig  .env  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-publish.yml  python-tests.yaml
anymailer/: LICENSE  __init__.py  __main__.py  app.py
anymailer/anymailer/: __main__.py  app.py
anymailer/docs/: conf.py  usage.md
anymailer/providers/: email_provider.py
anymailer/src/anymailer/: __init__.py
docs/: conf.py  index.md
email_provider_switcher/providers/: amazon_ses.py
tests/: test_run.py  test_sample.py
tests/anymailer/: test_sample.py
