[tool.poetry]
name = "email-provider-switcher"
version = "0.1.0"
description = ""
authors = ["shimakaze-git <shimakaze.soft+github@googlemail.com>"]
readme = "README.md"
packages = [{include = "email_provider_switcher"}]

[tool.poetry.scripts]
console_run = 'email_provider_switcher.console:run'

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
lizard = "^1.17.10"
pytest = "^7.3.1"
tox = "^4.5.1"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''
