[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "anymailer"
version = "0.1.0"
description = "A simple application"
authors = ["shimakaze-git <shimakaze.soft+github@googlemail.com>"]
readme = "README.md"
packages = [{include = "anymailer"}]

# Use identifier from https://spdx.org/licenses/
license = "MIT"
homepage = "https://github.com/shimakaze-git/anymailer"
repository = "https://github.com/shimakaze-git/anymailer"
documentation = "README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Environment :: Console",
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/shimakaze-git/anymailer/issues"

[tool.poetry.scripts]
console_run = 'email_provider_switcher.console:run'

[tool.poetry.dependencies]
python = "^3.10.0"
click = "*"

[tool.poetry.group.test.dependencies]
bandit = "*"
black = "*"
bump2version = "*"
flake8 = "^6.0.0"
isort = "^5.12.0"
jedi-language-server = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
reorder-python-imports = "*"
vulture = "*"
typeguard = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pyupgrade = "*"
darglint = "*"
pyinstaller = "*"

[tool.poetry.group.docs.dependencies]
furo = "*"
myst_parser = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-click = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
lizard = "^1.17.10"
pytest = "^7.3.1"
tox = "^4.5.1"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.ruff]
select = ["ALL"]
lines-after-imports = 2

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.bandit]
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pytest.ini_options]
pythonpath = [
"anymailer"
]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
